--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
                     if (username == "2620" && password == "sastra")
                     {
                         document.getElementById("loginMessage").innerHTML = "Login successful!";
-                        window.location.href = "aindex.html";
+                        window.location.href = "Aindex.html";
                     }
                     else if (username == "2621" && password == "sastra")
                     {
                         document.getElementById("loginMessage").innerHTML = "Login successful!";
-                        window.location.href = "bindex.html";
+                        window.location.href = "Bindex.html";
                     }
                     else if (username=="" || password=="")
                     {
