--- a/Aindex.html
+++ b/Aindex.html
@@ -181,10 +181,10 @@
     <nav>
         <label class="menu">TUTOR CONNECT</label>
         <ul>
-            <li><a href="aindex.html">INDEX</a></li>
-            <li><a href="CDa.html">COURSE DETAILS</a></li>
-            <li><a href="TTa.html">TIME TABLE</a></li>
-            <li><a href="login.html">LOG-OUT</a></li>
+            <li><a href="Aindex.html">INDEX</a></li>
+            <li><a href="aCourseDetail.html">COURSE DETAILS</a></li>
+            <li><a href="aTimeTable.html">TIME TABLE</a></li>
+            <li><a href="index.html">LOG-OUT</a></li>
         </ul>
     </nav>
 </header>
