--- a/bCourseDeatil.html
+++ b/bCourseDeatil.html
@@ -94,10 +94,10 @@
         <nav>
             <label class="menu">TUTOR CONNECT</label>
             <ul>
-                <li><a href="bindex.html">INDEX</a></li>
-                <li><a href="CDb.html">COURSE DETAILS</a></li>
-                <li><a href="TTb.html">TIME TABLE</a></li>
-                <li><a href="login.html">LOG-OUT</a></li>
+                <li><a href="Bindex.html">INDEX</a></li>
+                <li><a href="bCourseDetail.html">COURSE DETAILS</a></li>
+                <li><a href="bTimeTable.html">TIME TABLE</a></li>
+                <li><a href="index.html">LOG-OUT</a></li>
             </ul>
         </nav>
     </header>
