--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
                 {
                     var username = document.getElementById("loginUsername").value;
                     var password = document.getElementById("loginPassword").value;
-                    if (username == "2620" && password == "sastra")
+                    if (username == "1230" && password == "2025")
                     {
                         document.getElementById("loginMessage").innerHTML = "Login successful!";
                         window.location.href = "Aindex.html";
                     }
-                    else if (username == "2621" && password == "sastra")
+                    else if (username == "1231" && password == "2025")
                     {
                         document.getElementById("loginMessage").innerHTML = "Login successful!";
                         window.location.href = "Bindex.html";
