--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             color: greenyellow;
         }
     </style>
-  <title>TUTOR CONNECT LOGIN PAGE</title>
+  <title>TUTOR CONNECT LOGIN</title>
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -196,29 +196,29 @@
                 }
             });
 
-            document.getElementById("loginPage").addEventListener("click", function ()
-            {
-                var username = document.getElementById("loginUsername").value;
-                var password = document.getElementById("loginPassword").value;
-                if (username == "2620" && password == "sastra")
-                {
-                    document.getElementById("loginMessage").innerHTML = "Login successful!";
-                    window.location.href = "aindex.html";
-                }
-                else if (username == "2621" && password == "sastra")
-                {
-                    document.getElementById("loginMessage").innerHTML = "Login successful!";
-                    window.location.href = "bindex.html";
-                }
-                else if (username=="" || password=="")
-                {
-                    document.getElementById("loginMessage").innerHTML = "Please entry your Tutor ID and password.";
-                }
-                else
-                {
-                    document.getElementById("loginMessage").innerHTML = "Login failed. Please check your Tutor ID and password.";
-                }
-            });
+            // document.getElementById("loginPage").addEventListener("click", function ()
+            // {
+            //     var username = document.getElementById("loginUsername").value;
+            //     var password = document.getElementById("loginPassword").value;
+            //     if (username == "2620" && password == "sastra")
+            //     {
+            //         document.getElementById("loginMessage").innerHTML = "Login successful!";
+            //         window.location.href = "aindex.html";
+            //     }
+            //     else if (username == "2621" && password == "sastra")
+            //     {
+            //         document.getElementById("loginMessage").innerHTML = "Login successful!";
+            //         window.location.href = "bindex.html";
+            //     }
+            //     else if (username=="" || password=="")
+            //     {
+            //         document.getElementById("loginMessage").innerHTML = "Please entry your Tutor ID and password.";
+            //     }
+            //     else
+            //     {
+            //         document.getElementById("loginMessage").innerHTML = "Login failed. Please check your Tutor ID and password.";
+            //     }
+            // });
         </script>
     </div>
   </section>
