--- a/index.html
+++ b/index.html
@@ -196,29 +196,29 @@
                 }
             });
 
-            // document.getElementById("loginPage").addEventListener("click", function ()
-            // {
-            //     var username = document.getElementById("loginUsername").value;
-            //     var password = document.getElementById("loginPassword").value;
-            //     if (username == "2620" && password == "sastra")
-            //     {
-            //         document.getElementById("loginMessage").innerHTML = "Login successful!";
-            //         window.location.href = "aindex.html";
-            //     }
-            //     else if (username == "2621" && password == "sastra")
-            //     {
-            //         document.getElementById("loginMessage").innerHTML = "Login successful!";
-            //         window.location.href = "bindex.html";
-            //     }
-            //     else if (username=="" || password=="")
-            //     {
-            //         document.getElementById("loginMessage").innerHTML = "Please entry your Tutor ID and password.";
-            //     }
-            //     else
-            //     {
-            //         document.getElementById("loginMessage").innerHTML = "Login failed. Please check your Tutor ID and password.";
-            //     }
-            // });
+            document.getElementById("loginPage").addEventListener("click", function ()
+            {
+                var username = document.getElementById("loginUsername").value;
+                var password = document.getElementById("loginPassword").value;
+                if (username == "1230" && password == "2025")
+                {
+                    document.getElementById("loginMessage").innerHTML = "Login successful!";
+                    window.location.href = "Aindex.html";
+                }
+                else if (username == "1231" && password == "2025")
+                {
+                    document.getElementById("loginMessage").innerHTML = "Login successful!";
+                    window.location.href = "Bindex.html";
+                }
+                else if (username=="" || password=="")
+                {
+                    document.getElementById("loginMessage").innerHTML = "Please entry your Tutor ID and password.";
+                }
+                else
+                {
+                    document.getElementById("loginMessage").innerHTML = "Login failed. Please check your Tutor ID and password.";
+                }
+            });
         </script>
     </div>
   </section>
