--- a/bCourseDetail.html
+++ b/bCourseDetail.html
@@ -3,93 +3,17 @@
 <html>
     <head>
         <title>II BCA B COURSE DETAILS</title>
-        <style>
-            *{
-                padding: 0;
-                margin: 0;
-                text-decoration: none;
-                list-style: none;
-                box-sizing: border-box;
+        <link rel="stylesheet" href="courseDetail.css">
+        <script>
+            function checkWindowSize() {
+              if (window.innerWidth < 1054) {
+                alert("Kindly use Desktop view, because this site support desktop view alone.");
+              }
             }
-
-            nav{
-                background: transparent;
-                height: 80px;
-                width: 100%;
-            }
-
-            nav ul{
-                float: right;
-                margin-right: 20px;
-            }
-
-            nav ul li{
-                display: inline-block;
-                line-height: 80px;
-                margin: 0 5px;
-            }
-
-            nav ul li a{
-                color:white;
-                font-size: 17px;
-                padding: 7px 13px;
-                border-radius: 3px;
-                text-transform: uppercase;
-            }
-
-            a.active,a:hover{
-                background: #047BF4;
-                transition: .5s;
-            }
-
-            label.menu{
-            color: white;
-            font-size: 35px;
-            line-height: 80px;
-            padding: 0  100px;
-            font-weight: bold;
-            }
-
-            body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #0CA8FF;
-            }
-
-            .container {
-            max-width: 1100px;
-            margin: 0 auto;
-            background-color: #fff; 
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            }
-
-            .table{
-            width: 100%;
-            border-collapse: collapse;
-            }
-
-            .table td{
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
-            }
-
-            .table th{
-            background-color: #047BF4; 
-            color: white;
-            font-weight: bold;
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-            }
-
-            .table tr:nth-child(even){
-            background-color: #f2f2f2;
-            }
-        </style>
+        
+            window.onload = checkWindowSize;
+            window.onresize = checkWindowSize;
+        </script>
     </head>
     <header>
         <nav>
